# nidhoggr

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  requirements.txt
docs/: requirements.txt
docs/source/: advanced_topics.rst  capabilities.csv  classes.rst  conf.py  core_concepts.rst  examples.csv  examples.rst  getting_started.py  getting_started.rst  index.rst  install.txt  installation.rst  intro.rst  nidhoggr_logo.py  oscillator.py  python_binding.rst  templating.rst  usage.bak  usage.rst
examples/: cherenkov.py  cosmo.py  diffractionGrating.py  doubleSlit.py  imageToStringArt.py  logo.xlsx  nidhoggr.py  oort.py  plinko.py  relativity.py  rps.py  stringArt.py  tensors.py  tsunami.py  vectors.py  waveLogo.py
gui/: graph_scene.py  graph_view.py  main.py
gui/nodes/: __init__.py  base_node.py
manual/: tech_manual.tex  user_manual.tex
src/: CMakeLists.txt  Grid_PYB11.py  Mesh_PYB11.py  RDE_PYB11.py  grid.cc  grid.cpp  grid.h  grid.py  main.cpp  std_any_converter.py  tensor_math.cc  test_harness.cpp  vector_math.cc  vector_math.py
src/Boundaries/: Boundaries_PYB11.py  CMakeLists.txt  Classes.md  GridBoundaries_PYB11.py  boundaries.hh  boundaries.py  boxCollider.cc  boxCollider.py  collider.hh  collider.py  dirichletGridBoundaries.cc  dirichletGridBoundaries.py  domainBoundaries.hh  domainBoundaries.py  gridBoundaries.hh  gridBoundaries.py  outflowGridBoundaries.cc  outflowGridBoundaries.py  pacmanDomainBoundaries.cc  pacmanDomainBoundaries.py  pacmanGridBoundaries.cc  pacmanGridBoundaries.py  periodicGridBoundaries.cc  periodicGridBoundaries.py  reflectingGridBoundaries.cc  reflectingGridBoundaries.py  sphereCollider.cc  sphereCollider.py  sphereParticleBoundary.cc  sphereParticleBoundary.py
src/Calculators/: CMakeLists.txt  Calculators_PYB11.py  StringArtPy.py  cosmology.cc  cosmology.py  stringArt.cc  timeDilation.cc  timeDilation.py
src/DataBase/: CMakeLists.txt  DataBase_PYB11.py  Field_PYB11.py  dataBase.hh  dataBase.py  field.cc  field.hh  field.py  fieldList.cc  fieldList.hh  fieldList.py  name.hh  nodeList.cc  nodeList.hh  nodeList.py
src/EOS/: CMakeLists.txt  Classes.md  EOSAbstractMethods.py  EOS_PYB11.py  MieGruneisenMaterials.py  OpacAbstractMethods.py  Opac_PYB11.py  TillotsonMaterials.py  equationOfState.hh  equationOfState.py  equationOfStateBase.cc  equationOfStateBase.hh  helmholtzEOS.cc  helmholtzEOS.py  idealGasEOS.cc  idealGasEOS.py  isothermalEOS.cc  isothermalEOS.py  mieGruneisenEOS.cc  mieGruneisenEOS.hh  mieGruneisenEOS.py  opacityModel.hh  opacityModel.py  polytropicEOS.cc  polytropicEOS.py  tillotsonEOS.cc  tillotsonEOS.py
src/Field/: CMakeLists.txt  Field_PYB11.py  field.cc  field.py
src/Generation/: AltAzNodeGenerator.py  CMakeLists.txt  FibonacciNodeGenerator.py  RPRPSNodeGenerator.py  RandomNodeGenerator.py  SEANodeGenerator.py
src/Hydro/: Hydro_PYB11.py  hydro_state.cc  hydro_state.py
src/IO/: CMakeLists.txt  Classes.md  IO_PYB11.py  PyImage.py  exportVTK.cc  hdf5MeshWriter.cc  hdf5MeshWriter.hh  hdf5MeshWriter.py  importDepthMap.cc  importDepthMap.hh  importObj.cc  siloMeshWriter.cc  siloMeshWriter.hh  siloMeshWriter.py  siloWriter.cc  siloWriter.hh  siloWriter.py  vtkMeshWriter.cc  vtkMeshWriter.hh  vtkMeshWriter.py
src/Integrator/: CMakeLists.txt  Integrator_PYB11.py  _classes.md  integrator.hh  integrator.py  rungeKutta2Integrator.cc  rungeKutta4Integrator.cc  rungeKutta4Integrator.py
src/Integrators/: CMakeLists.txt  Integrators_PYB11.py  crankNicolsonIntegrator.cc  crankNicolsonIntegrator.py  integrator.cc  integrator.hh  integrator.py  rungeKutta2Integrator.cc  rungeKutta2Integrator.py  rungeKutta4Integrator.cc  rungeKutta4Integrator.py
src/Math/: CMakeLists.txt  LinearAlgebra_PYB11.py  physicalConstants.hh  physicalConstants.py  scalarMath.hh  tensorMath.cc  tensorMath.hh  tensorMath.py  tensor_math.hh  tensor_math.py  vectorMath.cc  vectorMath.hh  vectorMath.py  vector_math.cc  vector_math.hh  vector_math.py
src/Mesh/: CMakeLists.txt  Classes.md  Mesh_PYB11.py  _classes.md  element.hh  element.py  elementFactory.hh  elementType.hh  femesh.cc  femesh.hh  femesh.py  grid.cc  grid.hh  grid.py  stellarGrid1d.cc  stellarGrid1d.hh  stellarGrid1d.py
src/Physics/: CMakeLists.txt  Classes.md  HLL.cc  Hydro_PYB11.py  PhysicsAbstractMethods.py  Physics_PYB11.py  RDE_PYB11.py  RPS_PYB11.py  _classes.md  classDiagram.md  constantGravity.cc  constantGravity.py  constantGridAccel.cc  constantGridAccel.py  eulerFaceHydro.cc  eulerFaceHydro.py  eulerHydro.cc  eulerHydro.py  eulerian1d.py  fem.cc  fem.py  gridHydro.cc  gridHydro.py  gridHydroBase.hh  gridHydroHLL.cc  gridHydroHLL.old  gridHydroHLL.py  gridHydroHLLC.cc  gridHydroHLLC.py  gridHydroHLLE.cc  gridHydroHLLE.py  hydro.hh  hydro.py  hydroBase.cc  hydroHLL.cc  hydroHLL.py  hydrostaticEquilibrium.cc  hydrostaticEquilibrium.hh  implicitPhysics.cc  implicitPhysics.py  (+30 more)
src/State/: CMakeLists.txt  State_PYB11.py  state.cc  state.hh  state.py
src/Trees/: CMakeLists.txt  Trees_PYB11.py  kdTree.cc  kdTree.hh  kdTree.py
src/Type/: CMakeLists.txt  PhysicalConstants_PYB11.py  Units.py  name.cc  name.hh  physicalConstants.hh  physicalConstants.py  uType.hh
src/Utilities/: Animation.py  CMakeLists.txt  CodeVersion.py  CommandLineArgs.py  Controller.py  Utilities.py  animation.py  printTable.hh  progressBar.hh
tests/: comet_test.py  eos_test.py  example.cc  femtest.py  field_test.py  grid_test.py  hydro1d.py  hydro_test.py  integrator_test.py  integrator_test_imp.py  kelvin-helmholtz.py  kinetics.py  mic_test.py  nbody_test.py  nidhoggr.py  nodeGeneratorCompare.py  nodeGeneratorTest.py  nodelist_test.py  orbit_test.py  outflowTest.py  physics_test.py  physics_test2.py  plinko.py  rayleigh-taylor.py  relativity.py  rps.py  run.py  sedov.py  sfo.asc  silo_test.py  sod.py  state_test.py  stellarEvo.py  tensor_test.py  test.py  tree_test.py  tsunami.py  vector_test.py  vtk_test.py  wave3d.py  (+4 more)
